<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="1.0">
        <Button
            android:id="@+id/button_report_poop"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:text="@string/report_poop_button_label"
            android:drawableBottom="@drawable/poop_icon"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <Button
            android:id="@+id/button_report_blocked_trail"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:text="@string/report_trail_blocked_button_label"
            android:drawableBottom="@drawable/tree_down_icon"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_report_trail_marker"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:text="@string/report_bad_trail_marker_button_label"
            android:drawableBottom="@drawable/trail_blaze_icon"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <Button
            android:id="@+id/button_report_trash"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:text="@string/report_trash_button_label"
            android:drawableBottom="@drawable/trash_icon"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>


</LinearLayout>
