<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/listCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/big_padding"
        android:text="@string/list_header_total"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="# of Items in list:" />

    <TextView
        android:id="@+id/listCountTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/big_padding"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/listCountLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/listCountLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/big_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listCountTotalTextView"
        tools:listitem="@layout/recyclerview_item" />

<!--    <ProgressBar-->
<!--        android:id="@+id/loadingSpinner"-->
<!--        style="@style/Widget.AppCompat.ProgressBar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="64dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:minWidth="75dp"-->
<!--        android:minHeight="75dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/recyclerview"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/recyclerview" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/desc_delete_all_entries"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabCustomSize="64dp"
        app:maxImageSize="32dp"/>

    <Button
        android:id="@+id/button_filter"
        android:layout_width="111dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btn_filter"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="#E40E0E"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Filter" />

</androidx.constraintlayout.widget.ConstraintLayout>